# haskell-fractal

./: .gitignore  README.md  fractal.hs  haskell-fractal.cabal  haskell-fractal.tex  poster.tex
