name:                   haskell-fractal
version:                0.2.0.0
synopsis:               Haskell example: Render a part of the Mandelbrot set to an image.
description:            Simple 1-file Haskell program that has big results, including a Latex document that combines the code and the output.
license:                MIT
license-file:           LICENSE
author:                 Cies Breijs
maintainer:             cies.breijs-AT-@gmail-DOT-.com
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

executable fractal
  main-is:              fractal.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base
                      , JuicyPixels
  ghc-options:          -O2 -Wall -fforce-recomp
  default-language:     Haskell2010

